service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-bootcamp
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: kubernetes-bootcamp
