app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop1
  labels:
    app: shop1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop1
  template:
    metadata:
      labels:
        app: shop1
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          name: shop1
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop2
  labels:
    app: shop2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop2
  template:
    metadata:
      labels:
        app: shop2
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:2.0
          name: shop2
---

apiVersion: v1
kind: Service
metadata:
  name: shop1
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: shop1
---

apiVersion: v1
kind: Service
metadata:
  name: shop2
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: shop2
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: shop-world.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shop1
                port:
                  number: 80
          - path: /2
            pathType: Prefix
            backend:
              service:
                name: shop2
                port:
                  number: 80
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello
                port:
                  number: 80
